@@ -3,8 +3,9 @@ Version 0.3.0:
 
 * New module 'fs' handles file-related operations
 * An UNIX signal handler has been implemented
-* [config] mongodb::output_dir has been migrated to fs::output_dir
+* [config] mongodb.output_dir has been migrated to fs.output_dir
 * [config] configuration file format has been changed from JSON to YAML
+* [config] New option mongodb.hosts.*.auth_db for specifying authentication database per host
 
 Version 0.2.3:
 ------------
